// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Navigation Menu Item update should fail with circular dependency when folderId equals id (self-reference) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "navigationMenuItem": [
        {
          "errors": [
            {
              "code": "CIRCULAR_DEPENDENCY",
              "message": "Navigation menu item cannot be its own parent",
              "userFriendlyMessage": "Navigation menu item cannot be its own parent",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "navigationMenuItem",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 navigationMenuItem",
    "summary": {
      "navigationMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while updating navigation menu item",
  "name": "GraphQLError",
}
`;

exports[`Navigation Menu Item update should fail with circular dependency when update creates a circular dependency chain 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "navigationMenuItem": [
        {
          "errors": [
            {
              "code": "CIRCULAR_DEPENDENCY",
              "message": "Circular dependency detected in navigation menu item hierarchy",
              "userFriendlyMessage": "Circular dependency detected in navigation menu item hierarchy",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "navigationMenuItem",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 navigationMenuItem",
    "summary": {
      "navigationMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while updating navigation menu item",
  "name": "GraphQLError",
}
`;
